<resources>
    <!-- XML Element Text Placeholders -->
    <string name="app_name">Dialer</string>
    <string name="header_info">What would you like to do?</string>
    <string name="button_dial">DIAL</string>
    <string name="button_download_voices">DOWNLOAD VOICES</string>
    <string name="button_call_list">CALL LIST</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_map">MAP</string>
    <string name="button_about">ABOUT</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Activity TextView Messages -->
    <string name="dial_activity_message">This is the Dial Activity</string>
    <string name="call_list_activity_message">This is the Call List Activity</string>
    <string name="settings_activity_message">This is the Settings Activity</string>
    <string name="map_activity_message">This is the Map Activity</string>

    <!-- Download voices URL -->
    <string name="download_voices_URL">https://dt031g.programvaruteknik.nu/dialer/voices/</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="store_numbers_title">Store numbers</string>
    <string name="store_numbers_summary_on">Dialed telephone numbers are stored so they at can be viewed later</string>
    <string name="store_numbers_summary_off">Dialed telephone numbers are not stored</string>
    <string name="delete_numbers_title">Delete numbers</string>
    <string name="delete_numbers_summary">Delete stored telephone numbers from storage</string>
    <string name="select_voices_title">Voice</string>
    <!-- About Dialog -->
    <string name="about_title">About</string>
    <string name="about_ok_button">OK</string>
    <string name="about_toast_message">You have already read the About-Dialog</string>
    <!-- Menu Items -->
    <string name="settings_title">Settings</string>
    <string name="delete_item_title">Delete stored numbers</string>
    <string name="download_voices_title">Download voices</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Download Activity -->
    <string name="download_voice_title">Downloading</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Call List Activity -->
    <string name="stored_numbers_title">You have no stored numbers yet</string>
</resources>