<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <SwitchPreference
            app:key="store_numbers"
            app:title="@string/store_numbers_title"
            app:summaryOn="@string/store_numbers_summary_on"
            app:summaryOff="@string/store_numbers_summary_off"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_baseline_save_24" />

        <Preference
            app:key="delete_numbers"
            app:title="@string/delete_numbers_title"
            app:summary="@string/delete_numbers_summary"
            android:icon="@drawable/ic_baseline_delete_forever_24_black"
            />
    </PreferenceCategory>

</PreferenceScreen>